@@ -1,3 +1,8 @@
+2013-03-06  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/56534
+	* g++.dg/template/crash115.C: New.
+
 2013-03-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/56539
